--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -480,7 +480,9 @@
 
 - Online learning 의 경우 만약 오류가 없으면 w를 바꾸지 않고 오류가 있으면 w를 수정한다
 
-    - 수정 방식 : **w ← w + yx** (y값은 +1, -1)
+    - 수정 방식
+ 
+      ![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론업데이트.png)
  
         -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직
 
