--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -486,8 +486,7 @@
  
         -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직
 
-
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/온라인알고리즘_퍼셉트론_수식전개.png)
 
 
 
