--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -486,9 +486,20 @@
  
         -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직
 
-![System Resources](../../images/Artificial%20Neural%20Network%20images/온라인알고리즘_퍼셉트론_수식전개.png)
+<br/>
 
+- 또한, 위 업데이트 후의 예측값이, 업데이트 전의 예측값보다 **항상 크거나 같다**
 
+    - 이것은 아래 공식으로 증명이 가능하다
+      
+    ![System Resources](../../images/Artificial%20Neural%20Network%20images/온라인알고리즘_퍼셉트론_수식전개.png)
+
+    - 위 공식을 보면 xTxy^2 + y^2에 의해 업데이트 값이 항상 크다는 것을 알 수 있음
+ 
+        -  값이 커진다 = 점점 +1과 -1쪽으로 붙는다 
+ 
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론알고리즘.png)
 
 
 
