--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -496,13 +496,15 @@
 
     - 위 공식을 보면 xTxy^2 + y^2에 의해 업데이트 값이 항상 크다는 것을 알 수 있음
  
-        -  값이 커진다 = 점점 +1과 -1쪽으로 붙는다 
+        -  값이 커진다 = 점점 +1과 -1쪽으로 붙는다
+     
+    - 아래는 퍼셉트론 알고리즘이다   
  
 
-![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론알고리즘.png)
+    ![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론알고리즘.png)
 
 
-
+## p.47부터
 
 
 
