--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -1,1 +1,110 @@
+### parameter & hyperparameter
+
+- **매개변수(Parameter)**
+  
+    - 모델이 학습을 통해 직접 조정하는 값 → 예: 가중치 w, 편향 b
+
+- **하이퍼파라미터(Hyperparameter)**
+
+    - **사람이 사전에 정해주는** 값, 학습 과정에서 자동으로 바뀌지 않음
+ 
+- 퍼셉트론의 매개변수 : w(가중치)**와 b(편향)
+
+- 퍼셉트론의 하이퍼파라미터 : E (에폭 수)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
