--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -7,12 +7,22 @@
 - **하이퍼파라미터(Hyperparameter)**
 
     - **사람이 사전에 정해주는** 값, 학습 과정에서 자동으로 바뀌지 않음
+
+ <br/>
  
 - 퍼셉트론의 매개변수 : w(가중치)**와 b(편향)
 
 - 퍼셉트론의 하이퍼파라미터 : E (에폭 수)
 
+- 아래는 실제 업데이트 과정을 보여준다
+
+    - w := w + err × x 에서 퍼셉트론의 정답은 y = 0 또는 1 이므로 err은 −1, 0, +1 중 하나 
+
+    - n개의 x 데이터를 가장 잘 설명할 수 있는 가중치를 계속 찾는 과정임 
+
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/파라미터코드예시.png)
+
+
 
 
 
