--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -20,9 +20,21 @@
 
     - n개의 x 데이터를 가장 잘 설명할 수 있는 가중치를 계속 찾는 과정임 
 
+<br/>
+
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/파라미터코드예시.png)
 
+<br/>
 
+### Geometric Intuition (기하학적 직관)
+
+- 내적 w ⋅ x는 두 벡터가 얼마나 같은 방향인지(정렬 정도)를 알려준다
+
+    - w ⋅ x > 0 이면 두 벡터가 비슷한 방향(각도 < 90°)
+ 
+    - w ⋅ x = 0 이면 두 벡터는 직각(90°)
+ 
+    - w ⋅ x < 0 이면 두 벡터는 반대 방향(각도 > 90°)
 
 
 
