--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -36,6 +36,11 @@
  
     - w ⋅ x < 0 이면 두 벡터는 반대 방향(각도 > 90°)
 
+<br/>
+
+- 결정경계 거리 공식
+
+![System Resources](../../images/Artificial%20Neural%20Network%20images/결정경계거리공식.png)
 
 
 
