--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -39,11 +39,14 @@
 <br/>
 
 - 결정경계 거리 공식
+    
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/결정경계거리공식.png)
+ 
+    - ∣w⋅x+b∣ 값 자체가 '확신 정도'를 나타냄
 
-![System Resources](../../images/Artificial%20Neural%20Network%20images/결정경계거리공식.png)
-
-
-
+    - 경계에서 멀수록 → 분류 확신 ↑
+ 
+    - **퍼셉트론이 작동하는 이유**: **틀린 점을 반대편**으로 밀어서 올바른 쪽에 위치시키기 때문
 
 
 
