--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -28,13 +28,21 @@
 
 ### Geometric Intuition (기하학적 직관)
 
-- 내적 w ⋅ x는 두 벡터가 얼마나 같은 방향인지(정렬 정도)를 알려준다
+- **내적 w ⋅ x**는 두 벡터가 **얼마나 같은 방향인지**(정렬 정도)를 알려준다
 
     - w ⋅ x > 0 이면 두 벡터가 비슷한 방향(각도 < 90°)
  
     - w ⋅ x = 0 이면 두 벡터는 직각(90°)
  
     - w ⋅ x < 0 이면 두 벡터는 반대 방향(각도 > 90°)
+ 
+    - wTx=∥w∥∥x∥cos(θ)를 보면 이해가 쉽다 
+
+<br/>
+
+- w나 x를 몇 배 키우거나 줄여도 **분류 결과는 같음**
+
+    - 분류는 **각도(방향)로 결정**되며, 스케일(크기)을 키워도 결과는 같지만 학습 속도에는 영향이 있음
 
 <br/>
 
@@ -47,6 +55,9 @@
     - 경계에서 멀수록 → 분류 확신 ↑
  
     - **퍼셉트론이 작동하는 이유**: **틀린 점을 반대편**으로 밀어서 올바른 쪽에 위치시키기 때문
+
+<br/>
+
 
 
 
