--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -58,12 +58,21 @@
 
 <br/>
 
+### 예시 문제 
 
+- w = [2,1], b = 3 일 때 다음을 답하시오
 
-
-
-
-
+    - x1 = [2,0]
+ 
+        - w⋅x1 + b = 4 + (-3) = 1 → 양수 → 클래스 +1
+   
+    - x2​=[0,3]
+ 
+        - w·x₂ + b = 3 + (-3) = 0 -> 경계 위 (보통은 -1로 )
+    
+    - x3​=[−1,0]
+ 
+        - w·x₃ + b = -2 + (-3) = -5 < 0 -> 음수 -> 클래스 -1  
 
 
 
