--- a/Artificial Neural Network/Artificial Neural Network study/02-1장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-1장.md
@@ -249,7 +249,6 @@
 
     <br/>
 
-
     - 편향 항을 포함하는 것은 **필수적**이다
  
     - 선형 결정 경계로 완벽하게 분리 가능한 데이터셋이 있더라도, 바이어스 항이 없으면 그렇게 하는 것이 **불가능**할 수 있음
@@ -259,6 +258,8 @@
         - 따라서 b가 있어야 경계를 옮겨서 데이터를 **제대로 분리가 가능**함
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/편향필요예시.png)
+
+- 이것은 b = 0 이라면 경계가 자유롭지 못하고 유연성이 떨어진다는 것과 같다 
 
 <br/>
 
