--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -74,13 +74,45 @@
  
         - w·x₃ + b = -2 + (-3) = -5 < 0 -> 음수 -> 클래스 -1  
 
+<br/>
+
+### 편향과 결정 경계의 관계 
+
+- 편향이 없을 때 결정 경계는 w ⋅ x = 0
+
+    - 경계를 **자유롭게 움직일 수 없고 유연성이 떨어짐**
+ 
+- 편향이 있으면 경계 방정식은 w ⋅ x + b = 0
+
+    - 이제 경계는 원래 직선과 평행한 채 어디든 이동 가능
+ 
+    - 편향 b가 원점으로부터의 거리(수직 이동)를 결정
+ 
+        - b > 0 : 양수 클래스가 되기 쉬워짐
+     
+        - b < 0 : 음수 클래스가 되기 쉬워짐 
+
+<br/>
+
+### 특수한 경우 
+
+- 여기서 x1과 x2를 그냥 x와 y로 생각하면 쉽다
+  
+- Case 1 : 결정 경계는 x1 = 0, 즉 y축
+
+    -  y축 오른쪽(x1 > 0)은 양성(positive class)
 
 
+- Case 2 : x1​ + x2 ​= 0, 즉 x2​=−x1
 
+    - 이것도 x1과 x2를 x, y 로 생각하면 y = -x 직선이다
+   
+    - 즉, x1 + x2 > 0 은, -x 직선보다 위에 존재하면 +1, 아래면 -1과 동치이다 
 
+ 
+- Case 3 : w를 2배한 경우 -> (2w)·x + 2b = 2(w·x + b) = 0
 
-
-
+    - 가중치 크기를 키우면 **직선(경계) 위치는 똑같고**, 단지 점이 선에서 얼마나 멀리 있는지 **확신 정도**만 바뀐다
 
 
 
