--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -114,6 +114,26 @@
 
     - 가중치 크기를 키우면 **직선(경계) 위치는 똑같고**, 단지 점이 선에서 얼마나 멀리 있는지 **확신 정도**만 바뀐다
 
+<br/>
+
+### Convergence Bounds (수학적 상한선)
+
+- **Convergence Bounds** : 학습 전에 퍼셉트론이 학습 과정에서 **최대 몇 번**까지 틀릴 수 있는지를 보장하는 수학적 상한선
+
+- 퍼셉트론은 얼마나 빨리 학습하는가?
+
+- 최대 오류 횟수는 (R/γ)^2 이하 ((R/γ)제곱 이하)
+
+    - R : 원점(0,0)으로부터 각 데이터 점까지의 거리 중 **최댓값**
+ 
+    - γ (마진) : 결정 경계와 가장 가까운 점까지의 거리 (**최소값**)
+ 
+        - 마진(margin)이 크면 (클래스가 멀리 떨어져 있으면) -> 빠르게 학습한다
+     
+        - 마진(margin)이 작으면 (클래스가 거의 겹쳐 있으면) -> 학습이 느리다
+     
+        - 데이터가 너무 크면 -> 학습 속도가 느려진다
+      
 
 
 
