--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -231,12 +231,17 @@
  
         - 집합(Set)으로 표현
 
-        - E1 = {1, 3, 5}
+        - E1 = {1, 3, 5} : 주사위 눈이 1 또는 3 또는 5가 나오는 사건 
 
-        - E2 = {2, 4}
+        - E2 = {2, 4} : 주사위 눈이 2 또는 4가 나오는 사건 
 
-        - E3 = {6}
+        - E3 = {6} : 주사위 눈이 6이 나오는 사건 
      
+    - **Partition (분할)** : 체를 빠짐없이 포함하고, 동시에 서로 겹치지 않는 사건들의 집합
+ 
+        - B₁, B₂, …, Bₙ이 Partition이 되려면 B₁, B₂, B₃, …, Bₙ의 합집합은 표본공간 Ω와 같다
+
+
     - **Sample Space (표본공간, Ω)** : 무작위 실험에서 일어날 수 있는 모든 결과들의 집합
  
         - 전체집합(Universal set)으로 표현
@@ -253,15 +258,32 @@
         - 사건 = 그 안에서 관심 있는 부분집합
 
         - 결과 = 실제로 나온 하나의 값
+     
+        - 분할 (Partition) = 표본공간을 빠짐없이 겹치지 않게 나눈 작은 조각들의 집합
 
         - 결과가 사건에 속하면 → 그 사건이 발생한 것
 
+<br/>
 
+### 주사위 예시
 
-## p.29부터
+- 주사위를 던지면 표본공간은 {1, 2, 3, 4, 5, 6}이다
 
-
-
+    - 주사위를 던졌을 때, 사건 E₁은 {1, 2}, 사건 E₂는 {4}라고 가정하자
+ 
+    - 실험 결과가 사건 A에 속하면, 우리는 사건 A가 발생했다고 말한다
+ 
+    - 주사위를 던졌는데 2가 나왔다면 ?
+ 
+        -  E₁ 사건은 발생한 것이다
+     
+        -  E₂ 사건은 발생하지 않았다
+     
+    - 주사위를 3번 던졌다면 ?
+ 
+        - 표본공간은 (1,1,1), (1,1,2), …, (6,6,6)까지의 모든 경우이다
+     
+            - 즉 , 6 x 6 x 6 = 216개의 경우가 존재한다 
 
 
 
