--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -285,18 +285,39 @@
      
             - 즉 , 6 x 6 x 6 = 216개의 경우가 존재한다 
 
+<br/>
+
+### Probability (확률 정의)
+
+- 사건 A에 대해, 그 사건이 일어날 확률을 **P(A)** 라고 한다
+
+    - P(A)는 **실험을 아주 많이 반복했을 때** 사건 A가 관측되는 비율이다
+ 
+        - 확률은 이론적 개념이지만, 직관적으로는 "많이 반복했을 때 사건이 나타나는 빈도"로 이해할 수 있다 
+
+<br/>
+
+- **Axioms of Probability (확률 공리)**
+
+    - **P(A) ≥ 0** : 어떤 사건 A라도 확률은 0보다 크거나 같다
+ 
+    - **P(S) = 1** : 표본공간 S 전체의 확률은 1이다
+ 
+    - 서로 겹치지 않는(disjoint) 사건 A1, A2, A3,…에 대해 **P(A1 ∪ A2 ∪ A3 ⋯) = P(A1) + P(A2) + P(A3) + ⋯** 이다 
+
+<br/>
+
+- **주사위 예시**
+
+- P({1}) = P({2}) = ⋯ = P({6}) 라 가정
+
+    - 1 또는 2 또는 … 또는 6이 나온다”의 확률은 각각 사건의 확률 합과 같다 -> 즉 1
+ 
+    - 전체 표본공간의 확률은 1이다
 
 
 
-
-
-
-
-
-
-
-
-
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률사건그림.png)
 
 
 
