--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -315,9 +315,9 @@
  
     - 전체 표본공간의 확률은 1이다
 
+    ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공리주사위예시.png)
 
-
-
+## p.35부터 
 
 
 
