--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -317,19 +317,83 @@
 
     ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공리주사위예시.png)
 
-## p.35부터 
+<br/>
+
+### 확률 공식 
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공식1.png)
+
+<br/>
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공식2.png)
+
+<br/>
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공식3.png)
+
+<br/>
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공식4.png)
+
+<br/>
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/확률공식5.png)
+
+<br/>
+
+- 예시문제 : 주사위를 두 번 던지고, 나온 값을 각각 X₁, X₂라고 하자
+
+    - (1) 표본공간(S)을 구하라
+ 
+        - S = {(1,1), (1,2), …, (6,6)}
+        
+        - 표본공간의 크기 : 주사위를 두 번 던지면 가능한 경우는 (1,1), (1,2), …, (6,6) → 총 36가지
+
+    - (2) 사건 A: 두 수의 합이 4 일 때, 사건 A의 원소를 찾고 P(A)를 구하시오 
+ 
+        -  (1,3), (2,2), (3,1)
+     
+        -  따라서 |A| = 3 이고, P(A) = 3/36 = 1/12
+     
+    - (3) 사건 B: 두 수의 합이 6 또는 7 일 때, 사건 B의 원소를 찾고 P(B)를 구하시오
+ 
+    - 합이 6: (1,5), (2,4), (3,3), (4,2), (5,1) → 5가지
+
+    - 합이 7: (1,6), (2,5), (3,4), (4,3), (5,2), (6,1) → 6가지
+
+    - 총 11가지 → P(B) = 11/36.
+     
+<br/>
+
+### Countable Sample Space (셀 수 있는 표본공)
+
+- **이산 확률공간**-
+    
+    - 셀 수 있는 경우들로 이루어진 공간을 말함
+ 
+    - 만약 셀 수 있는 집 A = {a₁, a₂, a₃, …} 가 존재한다면
+     
+        - P(A) = P(a₁) + P(a₂) + P(a₃) + … 로 사용 가능 
+     
+        - 하지만 **연속적인 공간에서는 사용 불가능**
+
+<br/>
+
+- **연속 확률공간**
+
+    - 표본공간을 **셀 수 없을** 때 
+
+    - S = ℝ⁺ = {x ∈ ℝ, x ≥ 0} : 실수 전체 중에서 0 이상인 값들
+ 
+<br/>
+
+- **연속공간 문제 예시**
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/연속공간문제예시.png) 
 
 
 
-
-
-
-
-
-
-
-
-
+<br/>
 
 
 
