--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -385,6 +385,18 @@
 
     - S = ℝ⁺ = {x ∈ ℝ, x ≥ 0} : 실수 전체 중에서 0 이상인 값들
  
+    - 만약 [0,1] 구간이 존재하고 여기 무작위로 한 점을 선택한다고 하자
+ 
+        - P([0,0.5]) = 0.5
+     
+        - P([0,0.25]) = 0.25
+     
+        - 즉, **P([a,b]) = b – a, 0 ≤ a ≤ b ≤ 1** 라는 공식이 도출되고
+     
+        - 전체 길이가 1이 아니라 L로 일반화하면 아래의 공식이 도출된다
+     
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/연속공간공식.png) 
+ 
 <br/>
 
 - **연속공간 문제 예시**
