--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -376,6 +376,8 @@
         - P(A) = P(a₁) + P(a₂) + P(a₃) + … 로 사용 가능 
      
         - 하지만 **연속적인 공간에서는 사용 불가능**
+     
+            - 연속 공간에서는 적분을 사용함  
 
 <br/>
 
@@ -395,7 +397,8 @@
      
         - 전체 길이가 1이 아니라 L로 일반화하면 아래의 공식이 도출된다
      
-        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/연속공간공식.png) 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/연속공간공식.png)
+        - 따라서 P([0.5,0.5]) = 0.5 – 0.5 = 0 이기 때문에 **연속 공간에서 한 점의 확률은 0 이다**
  
 <br/>
 
@@ -403,11 +406,37 @@
 
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/연속공간문제예시.png) 
 
+- 문제 : 어떤 기계의 수명 T가 x년 이상일 확률이 1/(2^x)라고 주어졌다
 
+- (1) : P(T>=1)  
+    
+    - x=1 대입 → 1/2^1 = 1/2  
+
+- (2) : P(T>=2)  
+
+    - x=2 대입 → 1/2^2 = 1/4  
+
+- (c) P(1<=T<=2)  
+
+    - **P(T>=1) - P(T>=2) = 1/2 - 1/4 = 1/4**
+ 
+    - 역으로 생각하면 1년 이상 유지되는 확률이 2년 이상 유지될 확률보다 더 큼
+ 
+    - 즉 P(1년 이상 유지) - P(2년 이상 유지)
 
 <br/>
 
+### Conditional probability (조건부 확률)
 
+- **조건부 확률**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률공식.png) 
+
+    - 사건 B가 일어났다는 조건 하에, 사건 A가 일어날 확률
+
+- ex: 흐린 날일 때 비가 올 확률을 생각해 보자
+
+    - P(Rain | Cloudy) = 즉
 
 
 
