--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -438,8 +438,47 @@
 
     - P(Rain | Cloudy) = 즉
 
+<br/>
 
+### 베이즈 정리 & 조건부확률 차이점 
 
+- **조건부확률**
+
+    - B가 일어났다는 사실을 알고 있을 때, A가 일어날 확률을 계산한 것
+    
+    - 즉, **원인**이 발생했을 때 **결과가 나온 확률**을 구한 것이다
+ 
+    - ex: 나이가 20세, 키 180cm인 사람이 농구 선수일 확률은?
+ 
+        - 증거 -> 결과
+     
+        - feature가 주어졌을 때 결과를 예측하는데 사용
+
+<br/>
+
+- **베이즈 정리**
+
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/베이즈정리공식.png) 
+
+    - **결과**가 나왔을 때, 해당 결과가 도출된 **원인의 확률**을 구한 것이다
+ 
+    - ex: 검사에서 양성이 나왔다. 이 사람이 실제로 병에 걸렸을 확률은 ?
+ 
+        - 해당 예시에서 우리가 쉽게 알 수 있는 것이
+     
+            - P(양성∣병 있음)
+         
+            - P(병 있음)
+         
+            - P(양성)
+         
+            - 이라면, P(원인|결과) = P(병 있음|양성)을 베이즈 추론을 통해 쉽게 구할 수 있다 
+
+- 정리하면 
+
+    - 조건부확률 = 원인 -> 결과
+
+    - 베이즈 정리 = 결과 -> 원인
 
 
 
