--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -430,7 +430,9 @@
 
 - **조건부 확률**
 
-    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률공식.png) 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률공식.png)
+ 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률공식추가설명.png) 
 
     - 사건 B가 일어났다는 조건 하에, 사건 A가 일어날 확률
 
