--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -439,6 +439,8 @@
 - ex: 흐린 날일 때 비가 올 확률을 생각해 보자
 
     - P(Rain | Cloudy) = 즉
+ 
+    - 추가적으로 **P(B|B) = 1**
 
 <br/>
 
@@ -482,7 +484,55 @@
 
     - 베이즈 정리 = 결과 -> 원인
 
+<br/>
 
+### 조건부 확률 성질 
 
+- 만약 사건들이(A₁, A₂, A₃,…) **서로 겹치지 않는다면**
 
+    - **P(A1​∪A2​∪A3​…∣B) = P(A1​∣B) + P(A2​∣B) + P(A3​∣B) + …** 성립
+      
+    <br/>
+    
+    - 겹치지 않는 경우 ex : 주사위 사건 A₁ = {1,2}, 사건 A₂ = {3,4}
+ 
+        - P(A1​∪A2​∣B) = P(A1​∣B) + P(A2​∣B)
+ 
+    - 겹치는 경우 ex : 주사위 사건 A₁ = {1,2,3}, 사건 A₂ = {3,4}
+ 
+        - P(A₁ ∪ A₂|B) **≠** P(A₁|B) + P(A₂|B) 
+
+<br/>
+
+- ex: 주사위를 두 번 던진다고 하자
+
+    - 사건 A: 주사위 중 적어도 하나에 3이 나온다
+ 
+    - 사건 B: 두 주사위의 합이 6이다
+ 
+    - P(A|B) = P(A∩B) / P(B) 를 구하여라
+ 
+        - B의 가능한 결과(합이 6) : (1,5), (2,4), (3,3), (4,2), (5,1) → 5가지 ⇒ P(B)=5/36
+
+        - A∩B (합이 6이면서 적어도 하나가 3) : 위 5개 중 (3,3)만 해당 → 1가지 ⇒ P(A∩B)=1/36
+
+        - 조건부확률 계산: P(A|B) = P(A∩B) / P(B) = (1/36) / (5/36) = 1/5 = 0.2
+
+        - 결론: P(A|B) = 1/5. 
+
+<br/>
+
+- 조건부 확률 특수한 경우
+
+    - A와 B가 서로 겹치지 않는 경우
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률겹치지않은경우.png)
+ 
+    - A가 B의 부분집합
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률부분집합.png)
+     
+    - B가 A의 부분집합
+ 
+        - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부확률부분집합2.png)
 
