--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -522,6 +522,16 @@
 
 <br/>
 
+- ex: 주사위를 던질 때, 조건이 “짝수가 나왔다”일 때, “5 이상일 확률”은 ?
+
+    - 사건 A = {5,6} (5 이상)
+ 
+    - 사건 B = {2,4,6} (짝수)
+ 
+        - 즉, (1/6) / (1/2) = 1/3
+
+<br/>
+
 - 조건부 확률 특수한 경우
 
     - A와 B가 서로 겹치지 않는 경우
