--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -1,1 +1,139 @@
-## p. 57 부터 
+### independent (독립)
+
+- 두 사건 A와 B가 독립이다 : B가 일어났다는 사실이 A의 확률에 **영향을 주지 않는다**
+
+    - 즉, A의 확률은 B와 상관없이 그대로 P(A)이며 아래가 성립한다
+    
+    - **P(A∩B) = P(A)P(B)** (교집합 확률이 각 확률의 곱과 같음)
+ 
+    - **P(A|B) = P(A)** (조건부확률 간략화 가능)
+    
+    - **P(A|B)P(B) = P(A)P(B)**
+
+<br/>
+
+- 주의할 점은 **배반(서로 겹치지 않는 사건)과 독립은 다르다**
+
+    - A∩B=∅(교집합 없음)은 둘이 동시에 일어날 수 없음을 뜻하지만, 독립은 서로 영향을 주지 않는다는 의미
+ 
+    - 배반 (Disjoint) : A ∩ B = ∅, P(A ∪ B) = P(A) + P(B)
+ 
+        - 즉, 배반인 경우 조건부확률 **P(A|B) = 0**
+ 
+    - 독립 (Independent) : P(A ∩ B) = P(A)P(B), P(A|B)=P(A), P(B|A)=P(B)
+
+<br/>
+
+- 또한 A, B가 둘 다 확률이 0이 아니면서 배반이면, **독립일 수 없다**
+
+    - 독립이면 P(A ∩ B) = P(A)P(B)가 되어야 하는데, 왼쪽은 0, 오른쪽은 0이 아님 → 모순 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
