--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -28,6 +28,7 @@
 
     - 독립이면 P(A ∩ B) = P(A)P(B)가 되어야 하는데, 왼쪽은 0, 오른쪽은 0이 아님 → 모순 
 
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전구문제.png)
 
 
 
