--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -6,9 +6,17 @@
     
     - **P(A∩B) = P(A)P(B)** (교집합 확률이 각 확률의 곱과 같음)
  
+    - **P(A ∩ B ∩ C) = P(A)P(B)P(C)** (3개도 가능)
+ 
     - **P(A|B) = P(A)** (조건부확률 간략화 가능)
     
     - **P(A|B)P(B) = P(A)P(B)**
+ 
+    - A^c & B 독립 (c는 여집합)
+
+    - A & B^c 독립
+
+    - A^c & B^c 독립
 
 <br/>
 
@@ -28,7 +36,34 @@
 
     - 독립이면 P(A ∩ B) = P(A)P(B)가 되어야 하는데, 왼쪽은 0, 오른쪽은 0이 아님 → 모순 
 
+<br/>
+
+- 예시 : 전구문제
+  
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전구문제.png)
+
+- 만약 A1과 A2 가 독립이고, 모두 경로가 막힐 확률이 p라면 (0 < p < 1)
+
+    - 모두 닫혀있는 경우만 제외하면 불이 켜지므로
+ 
+    - 1 - P^2 의 확률로 불이 켜진다
+ 
+    
+<br/>
+
+### 다트 문제
+
+- 문제상황 : 두 다트 플레이어가 번갈아 던지며, 먼저 과녁 중앙(불)을 맞추는 사람이 승리한다
+
+    - 플레이어 A가 불을 맞출 확률은 Pa , 플레이어 B는 Pb이다. 각 투구는 **독립적**이다
+ 
+    - 문제 : A가 먼저 던질 때, A가 승리할 확률을 구하시오
+
+<br/>
+
+- 풀이과정
+
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/다트문제풀이과정.png)
 
 
 
