--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -63,7 +63,7 @@
 
 - 풀이과정
 
-![System Resources](../../images/Probability%20Theory%20for%20AI%20images/다트문제풀이과정.jpg)
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/다트문제풀이과정.png)
 
 
 
