--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -65,8 +65,17 @@
 
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/다트문제풀이과정.png)
 
+<br/>
 
+### Law of Total Probability (전확률의 법칙)
 
+- 표본공간 S를 B1, B2, B3, ... 라는 부분 집합들로 나눈다고 하자
+
+    - 임의의 사건 A에 대해, 다음이 성립한다
+ 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률의법칙.png)
+ 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률의법칙추가설명.png)
 
 
 
