--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -76,6 +76,26 @@
     - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률의법칙.png)
  
     - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률의법칙추가설명.png)
+ 
+    - 사건 A의 확률은, 각 분할 Bi 안에서 A가 일어나는 확률들을 모두 합한 것과 같다
+ 
+    - 이 개념을 이해하기 위해 아래 예시를 보자 
+ 
+    - ex: 주머니 안에 동전이 3개 있다
+ 
+        - 동전 1번을 던졌을 때 앞면(Head)이 나올 확률은 0.9 : P(H∣C1) = 0.9
+ 
+        - 동전 2번은 앞면 확률 0.6 : P(H∣C2) = 0.6
+ 
+        - 동전 3번은 앞면 확률 0.3 : P(H∣C3) = 0.3
+     
+        - 그럼 우리는 상식적으로 0.9 x 1/3 + 0.6 x 1/3 + 0.3 x 1/3 를 할 것이다
+     
+        - 이것을 일반화 시킨것이 Law of Total Probability (전확률의 법칙)이다
+     
+            -  P(H) = P(H∣C1)P(C1) + P(H∣C2)P(C2) + P(H∣C3)P(C3)
+         
+            -  P(H) = 0.9 x 1/3 + 0.6 x 1/3 + 0.3 x 1/3 = 0.6
 
 
 
