--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -103,11 +103,11 @@
 
 - **베이즈 정리** : A가 일어났다는 조건 하에서 B가 일어날 확률은, B가 일어났을 때 A가 일어날 확률 × B의 확률을 A의 확률로 나눈 것
 
-![System Resources](../../images/Probability%20Theory%20for%20AI%20images/베이즈정리공식.png)
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/베이즈정리공식.png)
 
-![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률법칙_베이즈정리.png)
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전확률법칙_베이즈정리.png)
 
-
+    - 위 식의 분모 P(A)는 Law of Total Probability (전확률의 법칙)에 의해 변환한 것 
 
 
 
