--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -110,6 +110,27 @@
     - 위 식의 분모 P(A)는 Law of Total Probability (전확률의 법칙)에 의해 변환한 것 
 
 
+<br/>
+
+### 베이즈 정리 문제 
+
+- 문제상황 : 어떤 통신 시스템에서 0 또는 1이 전송된다
+
+    - 0이 전송될 확률은 p0
+
+    - 1이 전송될 확률은 1 - p0 = p1
+
+    - 0이 전송되었는데 1로 잘못 수신될 확률은 β
+    
+    - 1이 전송되었는데 0으로 잘못 수신될 확률도 β
+ 
+    - 문제 : 수신 측에서 ‘1’을 관찰했을 때, 실제로 ‘1’이 전송되었을 확률은 얼마인가?
+ 
+    - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전송문제풀이.png)
+ 
+      
+
+
 
 
 
