--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -130,9 +130,23 @@
  
     - ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/전송문제풀이.png)
  
-      
+<br/>
 
+### Conditional Independence (조건부 독립)
 
+- **일반 독립 (Independence)**
+
+    - P(A ∩ B) = P(A)P(B)
+ 
+    - A가 일어났는지 여부가 B의 확률에 전혀 영향을 주지 않는다
+
+- **조건부 독립 (Conditional Independence)**
+
+    - P(A ∩ B∣C) = P(A∣C)P(B∣C)
+ 
+    - 전체적으로는 A와 B가 독립이 아닐 수도 있지만, C라는 조건을 알면 서로 독립적으로 취급할 수 있다
+ 
+    -  ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부독립증명.png)
 
 
 
