--- a/Probability Theory for AI/Probability Theory for AI study/02-2장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02-2장.md
@@ -146,6 +146,16 @@
  
     - 전체적으로는 A와 B가 독립이 아닐 수도 있지만, C라는 조건을 알면 서로 독립적으로 취급할 수 있다
  
+        - A = “기침을 한다”
+
+        - B = “열이 난다”
+
+        - C = “독감에 걸렸다
+     
+        - 전체적으로 보면 기침(A)과 열(B)은 서로 관련이 있어 보인다
+
+    - **P(B ∩ A ∩ C) = P(A)P(B|A)P(C|A ∩ B)** 증명 과정 (by 체인 룰)
+    
     -  ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/조건부독립증명.png)
 
 
