--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -13,3 +13,80 @@
 ### 컴퓨터비전 & 영상 처리 차이 
 
 ![System Resources](../../images/Computer%20Vision%20images/컴퓨터비전_영상처리차이.png)
+
+<br/>
+
+### 영상 획득과 표현
+
+- 영상 획득 과정은 매우 복잡하다
+
+    - 실제로 빛이 들어와서 이미지가 만들어지는 과정은 여러 단계가 얽혀 있어 어려움 
+
+<br/>
+
+- **핀홀 카메라 모델** : 렌즈 없이 작은 구멍(핀홀)만으로 외부의 빛을 받아 화면에 상을 맺는 가장 단순한 카메라 모델
+
+    - 복잡한 과정 중에서 **중요한 핵심만 간단하게** 설명할 수 있다 
+
+
+![System Resources](../../images/Computer%20Vision%20images/핀홀카메라.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
