--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -24,14 +24,26 @@
 
 <br/>
 
-- **핀홀 카메라 모델** : 렌즈 없이 작은 구멍(핀홀)만으로 외부의 빛을 받아 화면에 상을 맺는 가장 단순한 카메라 모델
+- **핀홀 카메라 모델** : 렌즈 없이 하나의 작은 구멍(핀홀)만으로 외부의 빛을 받아 화면에 상을 맺는 가장 단순한 카메라 모델
 
-    - 복잡한 과정 중에서 **중요한 핵심만 간단하게** 설명할 수 있다 
+    - 복잡한 과정 중에서 **중요한 핵심만 간단하게** 설명할 수 있다
+ 
+    - 핀홀 카메라의 원리를 이용해서 영상 획득 원리 (카메라의 기본 원리)를 간단하게 설명하자면
+ 
+    - **빛이 직선으로만 이동**하기 때문에 위에 있는 물체에 반사된 빛은 구멍을 통과하기 위해 아래로 향하고, 아래쪽에서 반사된 빛은 위로 올라가서 **뒤집혀** 보이는 현상이 발생한다
+ 
+    - 이후 렌즈를 사용하게 되면서 더 많은 빛을 받아들이고 초점을 맞춰 선명하고 밝은 상을 얻음
+ 
+        - 렌즈도 물체가 뒤집혀 보이지만 카메라 소프트웨어(펌웨어, ISP)가 이 데이터를 받아서 자동으로 상하·좌우를 반전시켜 저장
 
 
-![System Resources](../../images/Computer%20Vision%20images/핀홀카메라.png)
+    - ![System Resources](../../images/Computer%20Vision%20images/핀홀카메라.png)
 
+<br/>
 
+### 영상 처리 과정 
+
+![System Resources](../../images/Computer%20Vision%20images/영상처리과정.png)
 
 
 
