--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -30,7 +30,7 @@
  
     - 핀홀 카메라의 원리를 이용해서 영상 획득 원리 (카메라의 기본 원리)를 간단하게 설명하자면
  
-    - **빛이 직선으로만 이동**하기 때문에 위에 있는 물체에 반사된 빛은 구멍을 통과하기 위해 아래로 향하고, 아래쪽에서 반사된 빛은 위로 올라가서 **뒤집혀** 보이는 현상이 발생한다
+    - **빛이 직선으로만 이동**하기 때문에 위에 있는 물체에 반사된 빛은 구멍을 통과하기 위해 아래로 향하고, 아래쪽에서 반사된 빛은 위로 올라가서 구멍 뒤쪽에 **스크린**에 **뒤집혀** 보이는 현상이 발생한다
  
     - 이후 렌즈를 사용하게 되면서 더 많은 빛을 받아들이고 초점을 맞춰 선명하고 밝은 상을 얻음
  
@@ -46,8 +46,51 @@
 ![System Resources](../../images/Computer%20Vision%20images/영상처리과정.png)
 
 
+- **피사체 (Object)**
 
+    - 우리가 찍으려는 대상 (예: 사람, 나무, 자동차).
 
+    - 빛을 반사해서 카메라 쪽으로 전달
+
+    - 출발점: 영상 정보의 원천.
+
+- **렌즈 (Lens)**
+
+    - 피사체에서 반사된 빛을 모아 이미지 센서 위에 초점을 맺게 함
+
+    - 빛을 굴절시켜 선명한 상을 센서에 맺히도록 조절
+
+- **이미지 센서 (Image Sensor)**
+
+    - 빛(광자)을 **전기 신호(전하)** 로 변환
+
+    - 픽셀 단위로 빛의 세기(밝기, 색상)를 수치화
+
+    - 즉, **빛 → 전기 신호 변환 장치**
+ 
+    - 대표적으로 CCD, CMOS
+
+- **ISP (Image Signal Processor)**
+
+    - 센서에서 들어온 신호를 **디지털 영상으로** 가공
+
+    - 노이즈 제거, 색 보정, 화이트 밸런스, 밝기·대비 조절 등을 수행 (뒤집힌 사진의 반전도 수행)
+
+    - 거친 원본 신호 → **사람이 보기 좋은 영상**으로 보정
+
+- **메모리 카드 (Memory Card)**
+
+    - 최종적으로 처리된 영상을 **파일(JPEG, PNG, RAW 등)로 저장**
+
+    - 이후 재생, 전송, 편집 등에 활용.
+    
+    - 완성본 보관소
+
+<br/>
+
+- 정리하면
+
+    - 피사체에서 렌즈로 빛을 받음 ->  이미지 센서에서 전기신호로 변경 -> ISP에서 가공 -> 메모리 카드로 저장
 
 
 
