--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -92,14 +92,46 @@
 
     - 피사체에서 렌즈로 빛을 받음 ->  이미지 센서에서 전기신호로 변경 -> ISP에서 가공 -> 메모리 카드로 저장
 
+<br/>
 
+### 이미지 센서
 
+- **CCD (Charge-Coupled Device)**
+  - 픽셀에 모인 전하를 순차적으로 이동시켜 읽는 방식
+  - 화질이 우수하고 노이즈가 적지만, 전력 소모가 크고 가격이 비쌈
 
+- **CMOS (Complementary Metal-Oxide Semiconductor)**
+  - 픽셀마다 증폭 회로를 두어 병렬적으로 전하를 읽는 방식
+  - 저전력·고속·저가로 현재 대부분의 카메라에 사용됨
 
+- **ToF (Time of Flight)**
+  - 빛을 쏘고 반사되어 돌아오는 시간을 측정해 거리(깊이)를 계산
+  - 빛의 비행 시간을 측정해 깊이(3D) 정보를 얻는 센서
 
+- **IR (Infrared)**
+  - 가시광선 대신 적외선 파장을 감지해 영상을 형성
+  - 적외선을 감지해 어두운 환경이나 열을 측정하는 센서
 
+<br/>
 
+### 샘플링(sampling) & 양자화(quantization)
 
+- 샘플링과 양자화는 ISP 단계의 핵심 과정이다 
+
+- **샘플링(sampling)**
+
+    - 원래 연속적인 영상을 가로 M, 세로 N개의 격자로 나누어 각각의 점(픽셀)에서 빛의 세기를 **대표값**으로 뽑아내는 과정
+ 
+- **L 단계로 양자화 (quantization)**
+
+    - 픽셀 값(**밝기나 색상**)을 L개 단계로 나누어 가장 가까운 값으로 바꿔주는 과정
+ 
+    - 샘플링 과정에서는 연속적인 빛의 세기를 뽑았다면, 양자화 과정에서는 연속적인 값은 **이산적인 값**(0~255)으로 바꾸는 과정임
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/샘플링양자화.png)
+        
+ 
+ 
 
 
 
