--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -129,15 +129,33 @@
     - 샘플링 과정에서는 연속적인 빛의 세기를 뽑았다면, 양자화 과정에서는 연속적인 값은 **이산적인 값**(0~255)으로 바꾸는 과정임
  
     - ![System Resources](../../images/Computer%20Vision%20images/샘플링양자화.png)
+ 
+    - 또한 수학 그래프처럼 (0,0)이 가운데가 아니라, **왼쪽 위가 (0,0) 좌표**이다
+ 
+        - (y, x) 표기 → 보통은 행(row), 열(column) 순서이기 때문
+     
+        - 함수에 따라 (x,y) 표기 사용하니 주의할 필요 
         
- 
- 
+<br/>
+
+### Tensor (텐서)
+
+- Tensor : 수를 담는 다차원 배열(multidimensional array).
 
 
+- 0차원 (스칼라, scalar)
+    - 그냥 하나의 숫자
+    - ex: 7, 3.14
 
+- 1차원 (벡터, vector)
+    - 숫자들이 일렬로 모여 있는 것
+    - ex: [1, 2, 3, 4]
 
+- 2차원 (행렬, matrix)
 
+    - 가로·세로 격자로 정리된 것
 
+![System Resources](../../images/Computer%20Vision%20images/tensor.png)
 
 
 
