--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -157,12 +157,24 @@
 
 ![System Resources](../../images/Computer%20Vision%20images/tensor.png)
 
+<br/>
+
+### RGB 컬러 모델
+
+- **RGB 컬러 모델** : 빛의 3원색(빨강, 초록, 파랑)으로 색을 표현하는 모델
+
+    - 컴퓨터 모니터, 카메라 센서 등 디지털 장치의 기본 컬러 표현 방식
+ 
+    - 하드웨어(디스플레이, 센서)와 직접적으로 호환됨
+ 
+        - 기기(모니터, 카메라 센서 등)의 동작 원리 자체가 RGB 구조로 되어 있음
+ 
+    - 인간의 직관적 색 지각과 차이가 있어, 색상·채도·명도를 따로 다루기 불편
+ 
+        - 사람은 빨강/노랑/밝음/어두움 같은 직관적 단위로 색을 느끼지만, RGB는 단순히 세 가지 숫자(R,G,B)라서 색상, 채도, 명도를 구분하기 어려움
 
 
-
-
-
-
+![System Resources](../../images/Computer%20Vision%20images/RGB큐브.png)
 
 
 
