--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -173,12 +173,40 @@
  
         - 사람은 빨강/노랑/밝음/어두움 같은 직관적 단위로 색을 느끼지만, RGB는 단순히 세 가지 숫자(R,G,B)라서 색상, 채도, 명도를 구분하기 어려움
 
+        - ![System Resources](../../images/Computer%20Vision%20images/RGB큐브.png)
+ 
+<br/>
 
-![System Resources](../../images/Computer%20Vision%20images/RGB큐브.png)
+### HSV 컬러 모델
 
+- **Hue(색상)** : 빨강, 파랑, 초록 등 순수한 색의 종류
 
+    - 𝐻 ∝ 색상간차이 
 
+- **Saturation(채도)** : 색의 선명함, 회색~원색까지의 비율
 
+    -  𝑆 ∝max(𝑅,𝐺,𝐵) −min(𝑅,𝐺,𝐵) 
+
+    - 채도가 높으면 선명한 색, 낮으면 흐린 회색에 가까움 
+
+- **Value(명도)** : 밝기 정도
+
+    -  𝑉 =max(𝑅,𝐺,𝐵) 
+
+- 인간이 색을 인식하는 방식에 가깝게 설계된 모델
+
+    - 사람이 "밝다, 탁하다, 빨갛다"라고 느끼는 방식과 비슷하게 맞춰져 있음 
+
+- 조명 변화에 어느 정도 강인
+
+    - 같은 물체라도 조명이 달라질 때 RGB 값은 크게 변하지만, HSV는 비교적 일정하게 표현 가능 
+
+- 계산 변환 과정이 필요해 **연산 비용이 RGB보다 큼**
+
+    - RGB를 HSV로 바꾸려면 수학적 변환이 필요 → **계산량 증가**
+ 
+![System Resources](../../images/Computer%20Vision%20images/HSV.png)
+  
 
 
 
