--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -136,8 +136,9 @@
       
 <br/>
 
-### p.66부터 
+### Convergence Bounds 공식 및 증명 
 
+![System Resources](../../images/Artificial%20Neural%20Network%20images/수학적상한선.png)
 
 
 
