--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -138,16 +138,41 @@
 
 ### Convergence Bounds 공식 및 증명 
 
-![System Resources](../../images/Artificial%20Neural%20Network%20images/수학적상한선.png)
+- 아래는 가중치가 최소 어느정도 증가하고 최대 어느정도까지 증가하는지를 보여준다
 
+    - 이것을 통해 **퍼셉트론**은 무한히 학습하지 않고 **수렴**한다는 것을 보여준다 
 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/수학적상한선.png)
 
+<br/>
 
+- **lower bound** : 우리가 반복해서 가중치 w를 업데이트할 때, w의 크기(길이)는 무조건 **일정 속도 이상**으로 커진다는 보장
 
+- **lower bound 증명**
 
-
-
-
+    - 처음에는 가중치 w0가 0이고, w*가 이상적인 분리기(정답 가중치)라고 하자
+ 
+    - 만약 샘플을 잘못 분류하면, 가중치를 yixi만큼 업데이트 한다
+ 
+        - 즉, w(t+1) = w(t) + yixi
+     
+    - 여기서 양 변에 w*를 내적해보자 
+ 
+        -  w(t+1)​⋅w∗ = (wt​ + yi​xi​)​⋅w∗ = w(t)​⋅w + yi(xi​⋅w∗)
+     
+        - 즉, 새로운 가중치 w(t+1)과 w∗ 의 내적은 **이전 값 + yi(xi​⋅w∗)** 이다
+     
+        - 따라서 t번째에서 t+1번째로 가중치를 업데이트 할 때, 최적의 방향으로 yi(xi​⋅w∗) 만큼 밀어준다
+ 
+    - w∗는 최적 분리기라 항상 샘플을 올바르게 분류하므로, 내적 값이 **최소 𝛼**( 𝛼는 마진 ) 이상이다
+ 
+        - 즉 최적의 방향으로 yi(xi​⋅w∗) 밀어주는데, 이 값이 최소 마진보다는 크다는 것이다
+     
+        - 따라서 yi(xi​⋅w∗) ≥ α
+ 
+    - 따라서 매번 실수를 할 때마다 w(t+1)​⋅w∗ ≥ wt​⋅w∗ + α 이다
+ 
+        - 
 
 
 
