--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -172,7 +172,15 @@
  
     - 따라서 매번 실수를 할 때마다 w(t+1)​⋅w∗ ≥ wt​⋅w∗ + α 이다
  
-        - 
+        - 만약 1번 실수 한다면 : w1​⋅w∗ ≥ α
+     
+        - 2번 실수 한다면 : w2​⋅w∗ ≥ w1​⋅w∗ + α ≥ 2α 
+     
+        - 3번 실수 한다면 : w3​⋅w∗ ≥ w2​⋅w∗ + α ≥ 3α
+     
+        - 즉, i번 실수한다면 : **wi​⋅w∗ ≥ iα** 이고 **선형적으로 증가**한다는 결론이 나온다
+     
+            -  위 이미지에서 마진 공식 α = min yj​(xj​⋅w∗)를 보면 모든 샘플 xj에 대해 가장 작은 마진 값을 **고정**한 것이므로 상수 취급이 된다. 따라서 선형적으로 증가한다 
 
 
 
