--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -180,7 +180,14 @@
      
         - 즉, i번 실수한다면 : **wi​⋅w∗ ≥ iα** 이고 **선형적으로 증가**한다는 결론이 나온다
      
-            -  위 이미지에서 마진 공식 α = min yj​(xj​⋅w∗)를 보면 모든 샘플 xj에 대해 가장 작은 마진 값을 **고정**한 것이므로 상수 취급이 된다. 따라서 선형적으로 증가한다 
+            -  위 이미지에서 마진 공식 α = min yj​(xj​⋅w∗)를 보면 모든 샘플 xj에 대해 가장 작은 마진 값을 **고정**한 것이므로 상수 취급이 된다. 따라서 선형적으로 증가한다
+         
+
+    - 이것을 길이로 일반화 해주면 (Cauchy–Schwarz 부등식 사용)
+ 
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/lower_bound최종공식.png)
+ 
+      
 
 
 
