--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -186,6 +186,12 @@
     - 이것을 길이로 일반화 해주면 (Cauchy–Schwarz 부등식 사용)
  
         - ![System Resources](../../images/Artificial%20Neural%20Network%20images/lower_bound최종공식.png)
+     
+    - 정리하면 w가 정답 방향 𝑤∗ 쪽으로 선형적으로 증가한다는 것이고
+ 
+        - 길이로 표현해서 제곱을 나타낸 공식을 보면 **실제 가중치 벡터 크지는 이차 함수** 꼴로 증가하는 걸 볼 수 있다
+     
+        - ![System Resources](../../images/Artificial%20Neural%20Network%20images/bound그래프.png)
  
       
 
