--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -146,9 +146,7 @@
 
 <br/>
 
-- **lower bound** : 우리가 반복해서 가중치 w를 업데이트할 때, w의 크기(길이)는 무조건 **일정 속도 이상**으로 커진다는 보장
-
-- **lower bound 증명**
+- **lower bound (하한) 증명**
 
     - 처음에는 가중치 w0가 0이고, w*가 이상적인 분리기(정답 가중치)라고 하자
  
@@ -193,11 +191,16 @@
      
         - ![System Resources](../../images/Artificial%20Neural%20Network%20images/bound그래프.png)
  
-      
 
+<br/>
 
+- **upper bound (상한) 증명**
 
+    - ![System Resources](../../images/Artificial%20Neural%20Network%20images/upper_bound증명.png)
+ 
+ 
 
+   
 
 
 
