--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -198,6 +198,17 @@
 
     - ![System Resources](../../images/Artificial%20Neural%20Network%20images/upper_bound증명.png)
  
+    - 5번 과정에서 β 는 맨 위 이미지 공식에서처럼, 최대 거리를 고정한 것
+ 
+    - 6번 과정을 자세히 보면
+ 
+        - 첫 번쨔 업데이트 : ||w1||^2 <= ||w0||^2 + 𝛽 = 0 + 𝛽 = 𝛽
+
+        - 두 번째 업데이트 : ||w2||^2 <= ||w1||^2 + 𝛽 <= 𝛽 + 𝛽 = 2𝛽
+
+        - 세 번째 업데이트: ||w3||^2 <= ||w2||^2 + 𝛽 <= 2𝛽 + 𝛽 = 3𝛽
+ 
+ 
  
 
    
