--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -1,1 +1,114 @@
+### set (집합)
 
+- **set (집합)**
+
+    - 집합은 **순서가 없는** 객체들의 모임이다
+ 
+    - ex: 이 수업의 학생들
+ 
+    - ex: 이 방에 있는 의자들
+ 
+    - set (집합)에 속하는 객체들을 집합의 **원소(elements) 또는 멤버(members)** 라고 부른다
+ 
+    - 기호 **a ∈ A**는 a가 집합 A의 원소임을 뜻한다 ( = 집합 A가 원소 a를 포함한다 )
+ 
+    - 만약 a가 A의 원소가 아니라면 **a ∉ A**라고 쓴다
+ 
+<br/>
+
+- **set (집합) 표기법**
+
+- 집합은 보통 (집합 이름) = {원소1, 원소2, …}로 쓴다
+
+    - ex: S = {a, b, c, d}
+ 
+    - **순서는 중요하지 않다.** {a,b,c,d}와 {b,c,a,d}는 **같은 집합**이다
+
+- 각 원소는 포함되거나 포함되지 않거나 둘 중 하나다. 중복해서 써도 집합에는 **아무 문제가 없다**
+
+    - ex: {a,b,c,d} = {a,b,c,b,c,d} 
+
+- 패턴이 **명확**하다면 **…** 을 사용해서 집합의 원소를 다 쓰지 않고 표현할 수 있다
+
+    - ex: 영어 모음의 집합: V = {a, e, i, o, u}
+
+    - ex: 100보다 작은 모든 양의 정수 집합: S = {1,2,3,…,99}.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
