--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -24,9 +24,9 @@
  
     - **순서는 중요하지 않다.** {a,b,c,d}와 {b,c,a,d}는 **같은 집합**이다
 
-- 각 원소는 포함되거나 포함되지 않거나 둘 중 하나다. 중복해서 써도 집합에는 **아무 문제가 없다**
+- 각 원소는 포함되거나 포함되지 않거나 둘 중 하나다. 중복을 허용하지 않는다. 
 
-    - ex: {a,b,c,d} = {a,b,c,b,c,d} 
+    - ex: {a,b,c,d} = {a,b,c,b,c,d} (여기서 강조하는 건 c와 b가 2개든 3개든 어차피 하나로 본다는 )
 
 - 패턴이 **명확**하다면 **…** 을 사용해서 집합의 원소를 다 쓰지 않고 표현할 수 있다
 
@@ -34,28 +34,104 @@
 
     - ex: 100보다 작은 모든 양의 정수 집합: S = {1,2,3,…,99}.
 
+<br/>
+
+- 모든 원소들이 만족해야 하는 **조건**을 지정할 수도 있다
+
+    - S = {x | x is a positive integer less than 100}
+ 
+    - O = {x | x is an odd positive integer less than 10}
+ 
+    - O = {x ∈ Z⁺ | x is odd and x < 10} (Z⁺ : 양의 정수 집)
+
+- **조건식(Predicate) P(x)** 을 이용해 집합을 정의할 수도 있다
+
+    - 정의 : S = {x | P(x)}
+ 
+    - ex: P(x) = "x는 짝수이다"
+ 
+        - S = {x∣P(x)} = {x∣x is even}
+
+<br/>
+
+- 중요 집합 기호들
+
+    - N: 자연수
+
+    - Z: 정수
+
+    - Z⁺: 양의 정수
+
+    - Q: 유리수
+
+    - R: 실수
+
+    - R⁺: 양의 실수
+
+    - C: 복소수
+
+<br/>
+
+### 닫힌 구간 & 열린 구간
+
+- **Closed interval: [a,b]**
+
+    - a와 b를 **포함**해서 그 사이 모든 실수를 의미
+
+    - ex: [1,3] = {x | 1 ≤ x ≤ 3} → 1~3까지 다 포함 
+
+- **Open interval: (a,b)**
+
+    - a와 b는 **포함하지 않고**, 그 사이 모든 실수를 의미한다.
+
+    - ex: (1,3) = {x | 1 < x < 3} → 1과 3은 빠지고 그 사이 값만 포함
+ 
+    - [a,b) = {x | a ≤ x < b} : a는 포함, b는 제외
+
+    - (a,b] = {x | a < x ≤ b} : a는 제외, b는 포함
+
+<br/>
+
+### 전체집합 U & 공집합 ∅,{}
+
+- **전체집합 U** : 현재 논의 중인 모든 대상을 포함하는 집합
+
+    - 때로는 암묵적으로 정해진다
+ 
+        - 자연수 문제라면 U가 자연수 전체라고 묵시적으로 생각할 수 있음 
 
 
+- **공집합** : 원소가 하나도 없는 집합이다
 
+    - 기호는 ∅ 또는 {}를 사용한다
 
+<br/>
 
+### 집합의 원소가 집합인 경우 
 
+- 집합도 다른 집합의 원소가 될 수 있다
 
+    - ex: {{1,2,3}, a, {b,c}}
+ 
+    - ex: {N,Z,Q,R}
+ 
+        - 이 집합의 원소는 각각 자연수, 정수, 유리수, 실수 집합
+     
+    - **공집합(∅)과 공집합을 원소로 가지는 집합은 다르다**
+ 
+        - ∅: 아무 원소도 없는 집합
 
+        - {∅}: 원소가 하나 있는데, 그 원소가 ∅인 집합 
 
+<br/>
 
+### 집합의 동등성(Equality) & 부분집합(Subsets)
 
+- **집합의 동등성(Equality)**
 
-
-
-
-
-
-
-
-
-
-
+    - 두 집합이 같다는 것은 **원소가 완전히 같을 때**뿐이다
+ 
+    - 집합 A와 B가 같으면 **A = B**로 표기한다
 
 
 
