--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -132,15 +132,51 @@
     - 두 집합이 같다는 것은 **원소가 완전히 같을 때**뿐이다
  
     - 집합 A와 B가 같으면 **A = B**로 표기한다
+ 
+    - {1,3,5} = {3,5,1}
+ 
+    - {1,5,5,5,3,3,1} = {1,3,5}
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/집합의동등성.png)
+
+<br/>
+
+- **부분집합 (Subsets)**
+
+    - A의 모든 원소가 B의 원소라면 A는 B의 부분집합이다
+ 
+        - 모든 x에 대해, 만약 x가 A에 있다면 반드시 B에도 있어야 한다 
+ 
+    - A가 B의 부분집합 : **A ⊆ B** 로 표기
+
+    - **특수한 경우**
+ 
+    - a ∈ ∅ 는 언제나 거짓이므로 ∅ ⊆ S (공집합의 원소가 S에 속한다)는 항상 참
+ 
+        - 즉, **공집합은 모든 집합의 부분집합**
+     
+    - S ⊆ S는 참
+ 
+    - A = B ⇔ (A ⊆ B ∧ B ⊆ A)
+
+<br/>
+
+### 진부분집합(proper subset)
 
 
+- **진부분집합(proper subset)**
 
+    - 만약 A가 B의 부분집합이지만, A와 B가 같지 않는 경우
+ 
+        - 쉽게 말해. A의 원소가 B에 속하면서 완전히 같으면 안 됨 
 
+- 만약 A가 B의 진부분집합이라면, 다음 두 조건이 성립한다
 
+    - 모든 원소 x에 대해, x ∈ A 이면 x ∈ B (부분집합 조건)
 
-
-
-
+    - 어떤 원소 x는 B에는 속하지만 A에는 속하지 않는다 (A ≠ B 조건)
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/진부분집합벤다이어그램.png)
 
 
 
