--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -178,14 +178,75 @@
  
     - ![System Resources](../../images/Discrete%20Structures%20images/진부분집합벤다이어그램.png)
 
+<br/>
 
+### Set Cardinality (집합의 기수)
 
+- **Set Cardinality (집합의 기수)** : 집합에 들어 있는 서로 다른 원소의 **개수**
 
+    - 기호 : **|A|**
+ 
+    - A = {1,2,3} : |A| = 3
 
+    - B = ∅ : |B| = 0
 
+    - C = {∅} : **|C| = 1**
 
+    - D = Z (정수 전체) : **|D|는 무한(infinite)**
+ 
+    - 집합 S를 영어 알파벳 글자 집합이라고 하면 : |S| = 26
+ 
+    - 집합 {1,2,3}의 원소 : |{1,2,3}| = 3
 
+<br/>
 
+- **유한집합(finite set)**
+
+    - 집합 S에 서로 다른 원소가 정확히 n개 있고, n이 음이 아닌 정수인 집합
+ 
+    - 그렇지 않으면 **무한집합(infinite set)**
+
+<br/>
+
+### Power Sets (멱집합)
+
+- **Power Sets (멱집합)** : 어떤 집합 A의 모든 부분집합들의 집합
+
+    - **P(A)** 로 표기
+ 
+    - ex: A = {a,b} 라면 P(A) = {∅, {a}, {b}, {a,b}} 여기서 **공집합**도 추가하는게 중요
+ 
+    - 어떤 집합의 원소가 n개라면, 그 멱집합의 **원소 수(기수)는 2ⁿ**이다 (확률의 법칙)
+ 
+        - ex: A = {1,2,3}이면 원소가 3개 → 멱집합은 2³ = 8개 원소 
+
+<br/>
+
+### Tuples (튜플)
+
+- **Tuples (튜플)**
+
+    - **순서가 있는** n개의 원소를 모아둔 것을
+ 
+        - set (집합)과 다르게 **순서가 줃요**
+     
+        - 두 개의 n-튜플이 같으려면, 각 자리의 원소가 모두 같아야 한다
+     
+            - 1,2,3) = (1,2,3)는 같음, (1,2,3) **≠** (2,1,3)는 **다름**
+
+        - 원소가 2개인 튜플 (a,b)를 **순서쌍(ordered pair)** 이라 부른다
+     
+            - 순서쌍도 마찬가지로 (2,5) = (2,5)는 참, (2,5) ≠ (5,2)는 거짓
+      
+<br/>
+
+### Cartesian Product (카티션 곱)
+
+- **Cartesian Product (카티션 곱)**
+
+    - **A × B**로 표시하며, 이는 (a,b) 형태의 순서쌍들의 집합
+ 
+    - ![System Resources](../../images/Discrete%20Structures%20images/카디션곱.png)
 
 
 
