--- a/Discrete Structures/Discrete Structures study/03-1장.md
+++ b/Discrete Structures/Discrete Structures study/03-1장.md
@@ -246,8 +246,17 @@
 
     - **A × B**로 표시하며, 이는 (a,b) 형태의 순서쌍들의 집합
  
+        - 쉽게 말해 **모든 가능한 조합**으로 묶은 집합 
+ 
     - ![System Resources](../../images/Discrete%20Structures%20images/카디션곱.png)
+  
+    - ex: A = {a,b}, B = {1,2,3}
 
+        - A × B = {(a,1),(a,2),(a,3),(b,1),(b,2),(b,3)}
+
+    - A × B의 부분집합 R을 **A에서 B로의 관계(relation)** 라고 한다
+ 
+        - 위 예시에서 {(a,1), (b,2)} 는 A x B의 부분집합이므로 **관계**이다 
 
 
 
