--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -1,1 +1,114 @@
+### 세 종류의 영상 처리 연산
+
+- 영상을 처리할 때, 화소(픽셀)의 값을 새로 계산하는 방법은 화소가 새로운 값을 **어디서 받느냐**에 따라크게 3가지가 존재한다
+
+    - **점연산(point operation)** : 자기 자신에게서 받음
+
+    - **영역연산(area operation)** : 이웃 화소들에서 받음
+
+    - **기하연산(geometric operation)** : 기하학적 변환이 정해주는 곳에서 받음
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
