--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -7,6 +7,8 @@
     - **영역연산(area operation)** : 이웃 화소들에서 받음
 
     - **기하연산(geometric operation)** : 기하학적 변환이 정해주는 곳에서 받음
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/연상처리영상종류.png)
 
 
 
