--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -8,7 +8,7 @@
 
     - **기하연산(geometric operation)** : 기하학적 변환이 정해주는 곳에서 받음
  
-    - ![System Resources](../../images/Computer%20Vision%20images/연상처리영상종류.png)
+    - ![System Resources](../../images/Computer%20Vision%20images/영산처리연산종류.png)
 
 
 
