--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -3,17 +3,34 @@
 - 영상을 처리할 때, 화소(픽셀)의 값을 새로 계산하는 방법은 화소가 새로운 값을 **어디서 받느냐**에 따라크게 3가지가 존재한다
 
     - **점연산(point operation)** : 자기 자신에게서 받음
+ 
+        - 밝기 조절 -> 각 픽셀의 값을 단순히 더 밝게/어둡게 
 
     - **영역연산(area operation)** : 이웃 화소들에서 받음
+ 
+        - 한 픽셀의 새 값은 주변 픽셀들의 값을 함께 참고해서 정한다 
 
     - **기하연산(geometric operation)** : 기하학적 변환이 정해주는 곳에서 받음
  
+        - 한 픽셀의 새 위치가 좌표 변환(이동, 회전, 확대 등)에 의해 바뀌면서 값을 가져온다 
+ 
     - ![System Resources](../../images/Computer%20Vision%20images/영상처리연산종류.png)
 
+<br/>
 
+### 점 연산
 
+- **점 연산**
+  
+    - 영상을 밝거나 어둡게 조정
+ 
+        - 사진 전체를 더 밝게 하거나 어둡게 만든다 
 
+    - 선형 연산
+ 
+        - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절 
 
+    - ![System Resources](../../images/Computer%20Vision%20images/점연산공식.png)
 
 
 
