--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -16,6 +16,12 @@
  
     - ![System Resources](../../images/Computer%20Vision%20images/영상처리연산종류.png)
 
+- 정리하면
+
+    - 점 연산과 영역 연산은 화솟값
+ 
+    - 기하연산은 위치값을 건드리는 연산임
+      
 <br/>
 
 ### 점 연산
@@ -31,6 +37,18 @@
         - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절 
 
     - ![System Resources](../../images/Computer%20Vision%20images/점연산공식.png)
+ 
+    - min(f(j,i)+a, L-1) : 픽셀 값에 +a (더 밝게), 단 최대치 L-1을 넘지 않음 (i,j는 좌표값)
+
+    - max(f(j,i)-a, 0) : 픽셀 값에서 a만큼 빼기 (어둡게), 단 0보다 작아지지 않음
+
+    - (L-1) - f(j,i) : 픽셀 값을 반전 → 밝은 부분은 어둡게, 어두운 부분은 밝게
+ 
+        - L은 최대 밝기임. 보통 영상은 0부터 L-1까지의 값으로 픽셀 밝기를 표현 (0~255)
+     
+        - 8비트에서 그레이스케일 기준 (색 없이 밝기 정보만을 기준) L = 256 이므로
+     
+        - L-1 에서 (i,j)의 화솟값을 빼주면 밝기가 반전됨
 
 
 
