--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -34,7 +34,9 @@
 
     - 선형 연산
  
-        - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절 
+        - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절
+     
+    - 아래 공식에서 L은 최대 밝기이다 
 
     - ![System Resources](../../images/Computer%20Vision%20images/점연산공식.png)
  
@@ -44,7 +46,7 @@
 
     - (L-1) - f(j,i) : 픽셀 값을 반전 → 밝은 부분은 어둡게, 어두운 부분은 밝게
  
-        - L은 최대 밝기임. 보통 영상은 0부터 L-1까지의 값으로 픽셀 밝기를 표현 (0~255)
+        - 보통 영상은 0부터 L-1까지의 값으로 픽셀 밝기를 표현 (0~255)
      
         - 8비트에서 그레이스케일 기준 (색 없이 밝기 정보만을 기준) L = 256 이므로
      
