--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -26,15 +26,13 @@
 
 ### 점 연산
 
-- **점 연산**
+- **선형 연산**
   
     - 영상을 밝거나 어둡게 조정
  
         - 사진 전체를 더 밝게 하거나 어둡게 만든다 
 
-    - 선형 연산
- 
-        - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절
+    - 수학적으로 단순히 더하거나 빼는 방식으로 밝기 조절 (그래서 선형 연산임임)
      
     - 아래 공식에서 L은 최대 밝기이다 
 
@@ -52,8 +50,11 @@
      
         - L-1 에서 (i,j)의 화솟값을 빼주면 밝기가 반전됨
 
+<br/>
 
+- **비선형 연산** : 단순히 더하거나 빼는 게 아니라, **지수(γ)** 를 사용해서 밝기를 조절
 
+    - ![System Resources](../../images/Computer%20Vision%20images/감마연산공식.png) 
 
 
 
