--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -54,8 +54,23 @@
 
 - **비선형 연산** : 단순히 더하거나 빼는 게 아니라, **지수(γ)** 를 사용해서 밝기를 조절
 
-    - ![System Resources](../../images/Computer%20Vision%20images/감마연산공식.png) 
+    - ex: 감마 연산  
 
+    - ![System Resources](../../images/Computer%20Vision%20images/감마연산공식.png)
+ 
+    - 지수에 감마(γ)가 있는 f(i,j)를 보면 위에 점이 존재한다. 이것은 **정규화**의 의미이다
+ 
+    - 즉 f(i,j)가 0~1의 값으로 존재하므로
+ 
+        - γ < 1 → 값이 원래보다 커져서 더욱 밝아짐
+
+        - γ > 1 → 값이 줄어들어서 더욱 어두워짐
+
+        - γ = 1 → 변화 없음 (원본 그대로)
+     
+        - 즉, 선형 연산은 일정하게 밝기가 변하지만, 비선형 연산은 작은 값(어두운 픽셀)은 많이 밝아지고, 큰 값(밝은 픽셀)은 적게 변함 -> 즉 **디테일이 살아난다**
+     
+        - ![System Resources](../../images/Computer%20Vision%20images/감마연산그래프.png)
 
 
 
