--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -71,6 +71,8 @@
         - 즉, 선형 연산은 일정하게 밝기가 변하지만, 비선형 연산은 작은 값(어두운 픽셀)은 많이 밝아지고, 큰 값(밝은 픽셀)은 적게 변함 -> 즉 **디테일이 살아난다**
      
         - ![System Resources](../../images/Computer%20Vision%20images/감마연산그래프.png)
+     
+        - x축과 y축 모두 0~255 이고 x의 임의의 값 하나를 선택해서 y 값을 비교하면 밝기의 차이가 확실히 보인다 
 
 
 
