--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -1,4 +1,4 @@
-### 세 종류의 영상 처리 연산
+<img width="292" height="67" alt="image" src="https://github.com/user-attachments/assets/d33ef6d9-32bd-4093-910d-5b6fbf198912" />### 세 종류의 영상 처리 연산
 
 - 영상을 처리할 때, 화소(픽셀)의 값을 새로 계산하는 방법은 화소가 새로운 값을 **어디서 받느냐**에 따라크게 3가지가 존재한다
 
@@ -74,7 +74,13 @@
      
         - x축과 y축 모두 0~255 이고 x의 임의의 값 하나를 선택해서 y 값을 비교하면 밝기의 차이가 확실히 보인다 
 
+<br/>
 
+- **명암 조절**
+
+    - **히스토그램 평활화(histogram equalization)** : 히스토그램이 평평하게 되도록 영상을 조작해 영상의 **명암 대비를 높이는** 기법
+ 
+    - ![System Resources](../../images/Computer%20Vision%20images/히스토그램평활화.png)
 
 
 
