--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -80,7 +80,7 @@
 
     - **히스토그램 평활화(histogram equalization)** : 히스토그램이 평평하게 되도록 영상을 조작해 영상의 **명암 대비를 높이는** 기법
  
-    - ![System Resources](../../images/Computer%20Vision%20images/히스토그램평활화.png)
+    - ![System Resources](../../images/Computer%20Vision%20images/히스토그램평활화공식.png)
 
 
 
