--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -1,4 +1,4 @@
-<img width="292" height="67" alt="image" src="https://github.com/user-attachments/assets/d33ef6d9-32bd-4093-910d-5b6fbf198912" />### 세 종류의 영상 처리 연산
+### 세 종류의 영상 처리 연산
 
 - 영상을 처리할 때, 화소(픽셀)의 값을 새로 계산하는 방법은 화소가 새로운 값을 **어디서 받느냐**에 따라크게 3가지가 존재한다
 
@@ -81,6 +81,24 @@
     - **히스토그램 평활화(histogram equalization)** : 히스토그램이 평평하게 되도록 영상을 조작해 영상의 **명암 대비를 높이는** 기법
  
     - ![System Resources](../../images/Computer%20Vision%20images/히스토그램평활화공식.png)
+ 
+        - l : 원래의 픽셀 값 (0~7 단계)
+
+        - h : 그 값의 등장 횟수 (빈도수)
+
+        - ℎ^(𝑙) : 누적 분포 함수(CDF, cumulative distribution function)
+     
+            - 픽셀 값이 𝑙 이하인 값들이 영상 전체에서 차지하는 비율 
+          
+        - l′: 최종 변환된 픽셀 값 (반올림 처리) 
+
+    - 예시문제
+      
+    - ![System Resources](../../images/Computer%20Vision%20images/히스토그램평활화예시문제.png)
+ 
+        - 위 예시 문제에 대한 아래 풀이를 함깨 보자
+     
+        - ![System Resources](../../images/Computer%20Vision%20images/히스토그램과정표.png)
 
 
 
