--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -99,8 +99,26 @@
         - 위 예시 문제에 대한 아래 풀이를 함깨 보자
      
         - ![System Resources](../../images/Computer%20Vision%20images/히스토그램과정표.png)
+     
+            - h (빈도수) : 원래 영상에서 픽셀 값 l이 몇 번 나오는지 센 값
+         
+            - ĥ (정규화된 히스토그램) : 각 빈도수를 전체 픽셀 수로 나눔 → 확률로 변환
+         
+                - ex: 픽셀이 64개라면 h=2 → 2/64 = 0.03125
+             
+            - Ĥ (누적 분포 함수, CDF) : 지금까지 나온 비율을 순서대로 **누적**해서 더한 값
+         
+            - Ĥ × (L-1) : 누적 분포값을 픽셀 값 범위(0~L-1)로 맞추기 위해 곱
+         
+                - 여기서는 L=8 → 최대값 7
+             
+                - ex: Ĥ = 0.484375 → 0.484375 × 7 = 3.390625
 
-
+            - l′ (최종 매핑 값) : 소수점 반올림해서 정수 픽셀 값으로 변환
+         
+            - 아래는 예시 결과이다
+         
+            - ![System Resources](../../images/Computer%20Vision%20images/히스토그램예시문제결과.png)
 
 
 
