--- a/Computer Vision/Computer Vision study/02-1장.md
+++ b/Computer Vision/Computer Vision study/02-1장.md
@@ -119,6 +119,13 @@
             - 아래는 예시 결과이다
          
             - ![System Resources](../../images/Computer%20Vision%20images/히스토그램예시문제결과.png)
+            - 쉬운 예시를 들자면
+         
+                - 어떤 반에서 시험 점수가 50~60점일 때, 
+             
+                - 학생들 점수 차이가 거의 없으니, 누가 더 잘했는지 구분하기 어려움
+             
+                - 이때, 원래 50점 학생은 10점으로, 60점 학생은 90점으로 점수를 재매핑하면 차이가 확연하게 보임 
 
 
 
