--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -44,3 +44,39 @@
 - **심층신경망(Deep Neural Network, DNN)**
 
     - 은닉층이 2개 이상인 경우
+ 
+<br/>
+
+### 2 주차 
+
+- **뉴런의 흐름**
+
+    -  뉴런은 수상돌기로 입력 신호를 받고 → 세포체에서 처리하고 → 축삭을 통해 출력 신호를 전달하며 → 시냅스에서 다른 뉴런과 연결된다
+
+<br/>
+
+- **퍼셉트론의 핵심**
+
+    - 틀린 점을 반대편으로 밀어서 **올바른 쪽**에 위치시키기 
+
+    - **임계점** : (가중합 + 편향) > 0 이면 출력=1, 그렇지 않으면 0
+
+    - **선형적**으로 구분된 경우만 분류 가능 (비선형적 ex: XOR, NP-hard 은 불가능)
+ 
+        - 올바른 출력을 위한 가중치 업데이트를 반복
+     
+            - w := w + err × x 
+     
+        - 위 업데이트 후의 예측값이, 업데이트 전의 예측값보다 **항상 크거나 같다**
+
+<br/>
+
+- **Linear Decision Boundaries (선형 결정 경계)**
+
+    - 데이터 공간을 양쪽으로 나누는 선/면/초평면 : **w⋅x+b = 0**
+
+<br/>
+
+- **Convergence Bounds**
+
+    - 퍼셉트론은 무한히 학습하지 않고 **수렴**한다는 것을 보여줌 
