--- a/Artificial Neural Network/Artificial Neural Network study/02-2장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02-2장.md
@@ -180,6 +180,8 @@
      
             -  위 이미지에서 마진 공식 α = min yj​(xj​⋅w∗)를 보면 모든 샘플 xj에 대해 가장 작은 마진 값을 **고정**한 것이므로 상수 취급이 된다. 따라서 선형적으로 증가한다
          
+            -  학습이 i번 업데이트되면, 현재 가중치 wᵢ는 최적 해 w*와 **최소한 iα만큼 가까워진다**
+         
 
     - 이것을 길이로 일반화 해주면 (Cauchy–Schwarz 부등식 사용)
  
